add budget to forecast
